Fixes for CSS so everything aligns similarly and fallback fonts don't cause it to wrap badly

--- a/source/Octopus.Server.Extensibility.Authentication.AzureAD/Web/Static/styles/azureAD.css
+++ b/source/Octopus.Server.Extensibility.Authentication.AzureAD/Web/Static/styles/azureAD.css
@@ -10,13 +10,16 @@
 
 .aad-button img {
     margin-left: 10px;
-    margin-right: 10px;
-    margin-top: -2px;
+    margin-top: 9px; /* ([container-40h]-[image-22h]) / 2 = 9px */
+    float: left;
 }
 
 .aad-button div {
     font-weight: 600;
-    margin-top: 10px;
-    display: inline-block;
-    margin-left: 10px;
+    float: right;
+    text-align: left;
+    width: 200px;
+    height: 40px;
+    line-height: 40px;
+    overflow: hidden;
 }
